Lep/Grammar.bnf
<elements> ::= <expression> | <elements> ":" <expression>
<tuple> ::= "{" <elements> "}"
<suffix> ::= <tuple> | "(" <expression> ")"
<primary> ::= "(" <expr> ")" | NUMBER | STRING | IDENTIFIER | <primary> <suffix>
<self_change> ::= "++" IDENTIFIER | "--" IDENTIFIER
<prefix> ::= "+" | "-" | "!" | "@" | NULL
<factor> ::= <prefix> <primary> | <prefix> <self_change> | <tuple>
<expression> ::= <factor> | <expression> OPERATOR <factor>
<seperator> ::= "," | EOL
<paragraph> ::= <seperator> | <statement> | <paragraph> <seperator> | <paragraph> <seperator> <statement>
<ending> ::= "." | ";"
<block> ::= "->" <paragraph> <ending>
<guard> ::= <expr> <block>
<guard_list> ::= <guard> | <guard_list> <guard>
<if> ::= "?" <guard_list> "."
<while> ::= "*" <guard> "."
<statement> ::= <if> | <while> | <block> | <expression>
<function_definition> ::= "#" IDENTIFIER <tuple> <block>
<program_part> ::= <function_definition> | <statement>
<program> ::= <seperator> | <program_part> | <program> <seperator> | <program> <seperator> <program_part>
